tests/snapshots/examples_fixtures/type_system__failing__49_top_level_effect_with_existing_main.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/49_top_level_effect_with_existing_main.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> examples/type_system/failing/49_top_level_effect_with_existing_main.flx:3:1
  |
3 | print("top-level")
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ expected () -> Unit, found () -> Unit with IO


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/failing/49_top_level_effect_with_existing_main.flx:3:1
  |
3 | print("top-level")
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 2 errors.
== stdout ==
<not executed>
